<resources>
    <string name="app_name">AgileEstimation</string>
    <string name="headerlabel">Enter a value for the</string>
    <string name="valuelabel">Enter a value here:</string>
    <string name="set_value">Set Value</string>
    <string name="clear_text">Clear Value</string>
    <string name="choose_a_fibonacci">Choose a Fibonacci #</string>
    <string name="fib_alert">Choose a Fibanocci #</string>
    <string name="record_button">RECORD</string>
    <string name="stop_button">STOP</string>
    <string name="play_button">PLAY</string>
</resources>
