<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Header"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/Headerlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headerlabel"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:textSize="20sp"
            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/Headerlabel"
            android:dropDownSelector="@android:color/white"
            />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:paddingTop="10dp"
            android:layout_below="@+id/Headerlabel"
            android:maxLength="3"
            android:ems="3"
            />

        <Button
            android:id="@+id/setValuebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/editText"
            android:text="@string/set_value"
            android:layout_alignBottom="@+id/editText"/>

        <Button
            android:id="@+id/clearbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/clear_text"
            android:layout_toRightOf="@+id/setValuebtn"
            android:layout_alignBottom="@+id/editText" />

        <TextView
            android:id="@+id/fibonacciText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clearbtn"
            android:textStyle="bold"
            android:textSize="15sp"
            android:visibility="gone"
            android:text="@string/choose_a_fibonacci"
            android:textColor="#ff8100" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/valueID"
        android:layout_below="@+id/Header"
        android:background="#ff8100"
        >

        <TextView
            android:id="@+id/agilevalue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="210sp"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
